--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.1",
+        "foxy/foxy": "^1.2",
         "yii-tools/awesome-widget": "^1.0@dev",
         "yii-tools/form-model": "^1.0@dev",
         "yii-tools/html": "^1.0@dev",
