--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,47 @@
 {
-    "name": "yii-tools/template",
+    "name": "yii-tools/filepond-widget",
     "type": "library",
-    "description": "_____",
+    "description": "FilePond widget for YiiFramework v. 3.0.",
     "keywords": [
-        "_____"
+        "yii-tools",
+        "filepond",
+        "widget",
+        "yii3"
     ],
     "license": "mit",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "foxy/foxy": "^1.2",
+        "yii-tools/awesome-widget": "^1.0@dev",
+        "yii-tools/form-model": "^1.0@dev",
+        "yii-tools/html": "^1.0@dev",
+        "yiisoft/assets": "^3.0",
+        "yiisoft/files": "^2.0",
+        "yiisoft/strings": "^2.1",
+        "yiisoft/translator": "^2.2",
+        "yiisoft/translator-message-php": "^1.1",
+        "yiisoft/view": "^7.0",
+        "yiisoft/widget": "^2.0",
+        "yiisoft/yii-event": "^1.0"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.3",
         "phpunit/phpunit": "^9.5",
         "roave/infection-static-analysis-plugin": "^1.28",
-        "vimeo/psalm": "^5.6"
+        "vimeo/psalm": "^5.6",
+        "yii-tools/support": "^1.0@dev",
+        "yiisoft/test-support": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "Template\\": "src"
+            "Yii\\FilePond\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Template\\Tests\\": "tests"
+            "Yii\\FilePond\\Tests\\": "tests"
         }
     },
     "extra": {
@@ -35,7 +52,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "infection/extension-installer": true
+            "infection/extension-installer": true,
+            "foxy/foxy": true
         }
     },
     "scripts": {
