--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,13 @@
         "allow-plugins": {
             "infection/extension-installer": true,
             "foxy/foxy": true
+        },
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "config-plugin": {
+            "params": "params.php",
+            "common": ["common/*.php"]
         }
     },
     "scripts": {
