--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ name: build
 
 jobs:
   phpunit:
+    extensions: intl
     uses: yiisoft/actions/.github/workflows/phpunit.yml@master
     with:
       os: >-
