--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.1",
+        "ext-intl": "*",
         "foxy/foxy": "^1.2",
         "yii-tools/awesome-widget": "^1.0@dev",
         "yii-tools/form-model": "^1.0@dev",
@@ -47,6 +48,13 @@
     "extra": {
         "branch-alias": {
             "dev-main": "1.0.x-dev"
+        },
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "config-plugin": {
+            "params": "params.php",
+            "common": ["common/*.php"]
         }
     },
     "config": {
