--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^8.1",
         "ext-intl": "*",
         "foxy/foxy": "^1.2",
-        "yii-tools/awesome-widget": "dev-rework-base-code as 1.0@dev",
+        "yii-tools/awesome-widget": "^1.0@dev",
         "yii-tools/form-model": "^1.0@dev",
         "yii-tools/html": "^1.0@dev",
         "yiisoft/assets": "^4.0",
